<resources>
    <string name="app_name">Shareloc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="map_id">5285f8b09606d67e</string>
    <string name="no_account_register_here">Pas de compte ? Incris toi !</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="email">Email</string>
    <string name="achievements">Mes challenges :</string>
    <string name="none">None</string>
    <string name="countries_visited">Pays visités :</string>
    <string name="save_changes">Enregistrer</string>
    <string name="logout">Déconnexion</string>
    <string name="nickname">Pseudo</string>
    <string name="home">Ma carte</string>
    <string name="amis">Amis</string>
    <string name="user_profile">Mon compte utilisateur</string>
    <string name="challenge">Challenge</string>
    <string name="back">back</string>
    <string name="refresh" />
</resources>